Triangulation hangs in infinite loop (Export->Collada hangs) #43578

Closed
opened 2015-02-06 12:07:41 +01:00 by John W. Jackson · 7 comments

System Information
Operating system and graphics card

I could not get Blender to produce a System-info.txt file,
The attached file was generated by the Windows msinfo command:

System-info.txt

Blender Version
Broken: (2.73a)
Worked: (2.72b)

Export->Collada of the attached file hangs blender.
A task kill and program restart is necessary to recover.
An empty .dae file is produced.
Other Export formats work fine.
Collada export works properly in Version 2.72b.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Load the blender file "SnowBallCannon.blend".
invoke Export->Collada

Attached SnowBallCannon.blend file:

SnowBallCannon.blend

**System Information** Operating system and graphics card I could not get Blender to produce a System-info.txt file, The attached file was generated by the Windows msinfo command: [System-info.txt](https://archive.blender.org/developer/F141614/System-info.txt) **Blender Version** Broken: (2.73a) Worked: (2.72b) Export->Collada of the attached file hangs blender. A task kill and program restart is necessary to recover. An empty .dae file is produced. Other Export formats work fine. Collada export works properly in Version 2.72b. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Load the blender file "SnowBallCannon.blend". invoke Export->Collada Attached SnowBallCannon.blend file: [SnowBallCannon.blend](https://archive.blender.org/developer/F141611/SnowBallCannon.blend)

Changed status to: 'Open'

Changed status to: 'Open'
John W. Jackson self-assigned this 2015-02-06 12:07:41 +01:00

Added subscriber: @j007jackson-1

Added subscriber: @j007jackson-1
John W. Jackson was unassigned by Bastien Montagne 2015-02-06 14:31:42 +01:00
Bastien Montagne self-assigned this 2015-02-06 14:31:42 +01:00

It’s triangulating one of the two meshes that is the culprit, collada is not at stake here. :)

It’s triangulating one of the two meshes that is the culprit, collada is not at stake here. :)
Bastien Montagne changed title from Export->Collada hangs to Triangulation hangs in infinite loop (Export->Collada hangs) 2015-02-06 14:32:26 +01:00

This issue was referenced by 31170ec19e

This issue was referenced by 31170ec19ed2e3ec4d0cf223e214a1d6aa5f2249

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 31170ec19e.

Closed by commit 31170ec19e.

This issue was referenced by 7263fbd7a6ce7fb98d01618bdbad74c7658e8dbd

This issue was referenced by 7263fbd7a6ce7fb98d01618bdbad74c7658e8dbd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43578
No description provided.