Fix T43578: Beauty Triangulation would hang in infinite loop, due to float rpecision issue.

Only recompute if cost is below -FLT_EPSILON, we can get cases where both cases generate
very tiny negative costs (see 'Cylinder.004' mesh in .blend attached to report).